--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /blog_api/utils/__pycache__
 /blog_api/utils/api_arguments/__pycache__
 /blog_api/utils/tools/__pycache__
+/blog_api/utils/error_messages/__pycache__
+/blog_api/utils/error_messages/blog/__pycache__
+/blog_api/utils/error_messages/users/__pycache__
 /blog_api/utils/validators/__pycache__
 /.pytest_cache
 blogapi.sqlite3
